<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_short_name">MJLauncher</string>
    <string name="login_online_username_hint">Username</string>
    <string name="login_online_login_label">Login</string>
    <string name="hint_control_mapping">Touch the cogwheel icon to open the context menu ⚙\nTap a button to customize: edit, resize, remove, or change its keybinds.</string>
    <string name="warning_remove_account">This account will be removed!</string>
    <string name="alerttitle_installmod">Select a mod installer</string>
    <string name="error_fatal">MJLauncher has unexpectedly crashed</string>
    <string name="error_no_version">No version!</string>
    <string name="error_show_more">Show more</string>
    <string name="error_show_less">Show less</string>
    <string name="toast_permission_denied">The read/write to storage permission is required!</string>
    <string name="toast_optifine_success">Install successful</string>
    <string name="mcl_tab_wiki">Wiki</string>
    <string name="mcl_launch_cleancache">Cleaning cache files</string>
    <string name="mcl_launch_downloading">Downloading %s</string>
    <string name="mcl_launch_downloading_progress">"Downloading %s (%.2f MB / %.2f MB)"</string>
    <string name="mcl_launch_download_assets">Preparing to download resources</string>
    <string name="mcl_options">Options</string>
    <string name="mcl_option_customcontrol">Custom controls</string>
    <string name="mcl_setting_title_use_surface_view">Use alternate surface rendering</string>
    <string name="mcl_setting_subtitle_use_surface_view">May help performance in GPU bound scenarios.</string>
    <string name="mcl_setting_title_ignore_notch">Ignore notch</string>
    <string name="mcl_setting_subtitle_ignore_notch">Ignores the notch and extends the screen under it.\nGives you a more immersive experience.</string>
    <string name="mcl_setting_title_resolution_scaler">Resolution Scaler</string>
    <string name="mcl_setting_subtitle_resolution_scaler">Allows you to decrease the game resolution. 100% is full resolution.</string>
    <string name="mcl_setting_title_longpresstrigger">Trigger long press delay</string>
    <string name="mcl_setting_subtitle_longpresstrigger">Change long press trigger delay for destroying blocks and dropping items.</string>
    <string name="mcl_setting_title_buttonscale">Control buttons scaling</string>
    <string name="mcl_setting_subtitle_buttonscale">Upscale them if the buttons are too small.</string>
    <string name="mcl_setting_title_mousescale">Mouse scaling</string>
    <string name="mcl_setting_subtitle_mousescale">Change the size of the virtual mouse.</string>
    <string name="mcl_setting_title_javaargs">JVM Launch arguments</string>
    <string name="mcl_setting_subtitle_javaargs">Be careful, this may make game crash if modified without knowledge.</string>
    <string name="mcl_setting_category_renderer">Renderer</string>
    <string name="mcl_setting_renderer_gles2_4">Holy GL4ES - all versions till 1.21.4, fast</string>
    <string name="mcl_setting_renderer_vulkan_zink">Zink (Vulkan) - all versions, mid</string>
    <string name="mcl_setting_renderer_freedreno_kgsl">Freedreno - all versions, fast, Adreno-only</string>
    <string name="mcl_setting_renderer_ltw">LTW (OpenGL ES 3) - 1.17+ only, fast</string>
    <string name="mcl_setting_veroption_release">Release</string>
    <string name="mcl_setting_veroption_snapshot">Snapshot</string>
    <string name="mcl_setting_veroption_oldalpha">Old-alpha</string>
    <string name="mcl_setting_veroption_oldbeta">Old-beta</string>
    <string name="mcl_setting_java_sandbox">Sandbox .jar execution</string>
    <string name="mcl_setting_java_sandbox_subtitle">Control the availability of the sandbox security manager when executing a .jar file.</string>
    <string name="mcl_version_clone">Clone</string>
    <string name="global_edit">Edit</string>
    <string name="global_error">Error</string>
    <string name="global_load">Load</string>
    <string name="global_name">Name</string>
    <string name="global_remove">Remove</string>
    <string name="global_clone">Clone</string>
    <string name="global_restart">Restart</string>
    <string name="global_save">Save</string>
    <string name="global_unpacking">Unpacking %s</string>
    <string name="global_error_field_empty">This field can\'t be empty</string>
    <string name="global_waiting">Wait</string>
    <string name="global_select">Select</string>
    <string name="global_retry">Retry</string>
    <string name="global_default">Default</string>
    <string name="mcn_exit_title">Application/Game exited with code %d, check latestlog.txt for more details.</string>
    <string name="mcn_abort_title">Application/Game aborted, check latestlog.txt for more information</string>
    <string name="mcn_exit_confirm">Are you sure want to force close?</string>
    <string name="mcn_check_fail_vulkan_support">Zink (Vulkan) renderer is not supported on this device!</string>
    <string name="control_chat">Chat</string>
    <string name="control_debug">Debug</string>
    <string name="control_primary">Pri</string>
    <string name="control_secondary">Sec</string>
    <string name="control_shift">◇</string>
    <string name="control_inventory">Inv</string>
    <string name="control_up">▲</string>
    <string name="control_left">◀</string>
    <string name="control_right">▶</string>
    <string name="control_down">▼</string>
    <string name="control_jump">⬛</string>
    <string name="control_thirdperson">3rd</string>
    <string name="control_listplayers">Tab</string>
    <string name="control_mouse">Mouse</string>
    <string name="control_mouseoff">Mouse: off</string>
    <string name="control_mouseon">Mouse: on </string>
    <string name="control_forceclose">Force close</string>
    <string name="control_viewout">Log output</string>
    <string name="control_adebug">Input Debug</string>
    <string name="control_customkey">Send custom keycode</string>
    <string name="import_control_label">Import controls</string>
    <string name="import_control_invalid_file">Invalid or corrupted file</string>
    <string name="import_control_import_button">import controls</string>
    <string name="import_control_verifying_file">File is being verified, please wait and try again…</string>
    <string name="import_control_invalid_name">Invalid name or file already exists</string>
    <string name="import_control_done">Importation done</string>
    <string name="customctrl_toggle">Toggleable</string>
    <string name="customctrl_size">Size</string>
    <string name="customctrl_mapping">Mapping</string>
    <string name="customctrl_orientation">Orientation</string>
    <string name="customctrl_background_bitmap">Background image</string>
    <string name="customctrl_background_color">Background color</string>
    <string name="customctrl_background_color_warning">Changing background color will reset the background image</string>
    <string name="customctrl_corner_radius">Corner radius</string>
    <string name="customctrl_stroke_width">Stroke width</string>
    <string name="customctrl_stroke_color">Stroke color</string>
    <string name="customctrl_button_opacity">Button Opacity</string>
    <string name="customctrl_addbutton">Add button</string>
    <string name="customctrl_addbutton_drawer">Add button drawer</string>
    <string name="customctrl_addbutton_joystick">Add joystick</string>
    <string name="customctrl_addsubbutton">Add sub-button</string>
    <string name="customctrl_selectdefault">Select default controlmap</string>
    <string name="customctrl_export">Export controlmap</string>
    <string name="main_share_logs">Share log file</string>
    <string name="main_install_jar_file">Execute a .jar</string>
    <string name="main_play">Play</string>
    <string name="autoram_info_msg">Memory set to %d MB</string>
    <string name="mcl_setting_check_libraries">Check libraries after downloading</string>
    <string name="mcl_setting_check_libraries_subtitle">This option forces the launcher to check the library hash if it\'s available. Prevents broken downloads.</string>
    <string name="dl_library_sha_fail">Library %s is damaged and will be redownloaded</string>
    <string name="dl_library_sha_unknown">Library %s can\'t be checked, have to assume it\'s good</string>
    <string name="dl_library_sha_pass">Library %s is fine and usable</string>
    <string name="mcl_disable_gestures">Disable gestures</string>
    <string name="mcl_disable_gestures_subtitle">Disables gestures, such as hold to break block, and tap to place a block.</string>
    <string name="mcl_disable_swap_hand">Disable double tap to swap hands</string>
    <string name="mcl_disable_swap_hand_subtitle">Disables double tapping on the hotbar item to swap it in the second hand.</string>
    <string name="preference_microphone_access_title">Request microphone access permission</string>
    <string name="preference_microphone_access_description">Requests system to give access to device microphone for the game</string>
    <string name="preference_vulkan_driver_system_title">Use system Vulkan driver</string>
    <string name="preference_vulkan_driver_system_description">Force the launcher to use the system Vulkan driver instead of Turnip on Adreno GPUs. Only affects Zink and mods that use Vulkan.</string>
    <string name="preference_download_source_title">Game download source</string>
    <string name="preference_download_source_description">Select a download mirror instead of using the official download server</string>
    <string name="preference_verify_manifest_title">Verify game version manifest</string>
    <string name="preference_verify_manifest_description">When enabled, the launcher will check the game version manifest along with the libraries.</string>
    <string name="preference_category_miscellaneous">Miscellaneous settings</string>
    <string name="preference_category_personalization">Personalization</string>
    <string name="preference_background_enable_title">Enable custom menu background</string>
    <string name="preference_background_enable_description">Show a custom image or video behind the main menu, instead of the default background</string>
    <string name="preference_background_type_title">Background type</string>
    <string name="preference_background_pick_image_title">Choose background image</string>
    <string name="preference_background_pick_image_description">Pick a picture from your device to use as the menu background</string>
    <string name="preference_background_pick_video_title">Choose background video</string>
    <string name="preference_background_pick_video_description">Pick a video from your device to loop as the menu background</string>
    <string name="preference_background_pick_music_title">Choose background music</string>
    <string name="preference_background_pick_music_description">Pick an audio file to loop while the menu is open</string>
    <string name="preference_background_mute_music_title">Mute background music</string>
    <string name="preference_background_mute_music_description">Silence the background music without removing the selected file</string>
    <string name="mcl_button_social_media">Discord</string>
    <string name="mcl_button_open_directory">Open game directory</string>
    <string name="preference_verify_game_files_title">Verify game files</string>
    <string name="preference_verify_game_files_description">Verify downloaded game files against the checksum and size set in the metadata. Metadata JSON files are verified regardless of this setting.</string>
    <string name="preference_go_vroom_title">Fast game startup</string>
    <string name="preference_go_vroom_description">Don\'t verify file checksums upon sequential restarts. Makes the game start-up very fast.</string>
</resources>