<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto">

    <net.kdt.pojavlaunch.prefs.BackButtonPreference/>

    <PreferenceCategory android:title="@string/preference_category_miscellaneous">
        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_px_hash"
            android:key="checkGameFiles"
            android:summary="@string/preference_verify_game_files_description"
            android:title="@string/preference_verify_game_files_title" />

        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_px_zap"
            android:key="fastStartupCheck"
            android:summary="@string/preference_go_vroom_description"
            android:title="@string/preference_go_vroom_title" />
        <androidx.preference.ListPreference
            android:defaultValue="default"
            android:icon="@drawable/ic_px_file_dl"
            android:key="downloadSource"
            android:entries="@array/download_source_names"
            android:entryValues="@array/download_source_values"
            android:title="@string/preference_download_source_title"
            android:summary="@string/preference_download_source_description"
            app2:useSimpleSummaryProvider="true"/>
        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_px_verify_hash"
            android:key="verifyManifest"
            android:title="@string/preference_verify_manifest_title"
            android:summary="@string/preference_verify_manifest_description"/>

        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_px_volcano"
            android:key="zinkPreferSystemDriver"
            android:summary="@string/preference_vulkan_driver_system_description"
            android:title="@string/preference_vulkan_driver_system_title"/>
        <Preference
            android:key="microphoneAccessRequest"
            android:icon="@drawable/ic_microphone"
            android:title="@string/preference_microphone_access_title"
            android:summary="@string/preference_microphone_access_description" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_category_personalization">
        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_px_book"
            android:key="backgroundMediaEnabled"
            android:title="@string/preference_background_enable_title"
            android:summary="@string/preference_background_enable_description" />

        <androidx.preference.ListPreference
            android:defaultValue="image"
            android:icon="@drawable/ic_px_folder"
            android:key="backgroundType"
            android:entries="@array/background_type_names"
            android:entryValues="@array/background_type_values"
            android:title="@string/preference_background_type_title"
            app2:useSimpleSummaryProvider="true" />

        <Preference
            android:key="pickBackgroundImage"
            android:icon="@drawable/ic_px_folder"
            android:title="@string/preference_background_pick_image_title"
            android:summary="@string/preference_background_pick_image_description" />

        <Preference
            android:key="pickBackgroundVideo"
            android:icon="@drawable/ic_px_folder"
            android:title="@string/preference_background_pick_video_title"
            android:summary="@string/preference_background_pick_video_description" />

        <Preference
            android:key="pickBackgroundMusic"
            android:icon="@drawable/ic_microphone"
            android:title="@string/preference_background_pick_music_title"
            android:summary="@string/preference_background_pick_music_description" />

        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_microphone"
            android:key="muteBackgroundMusic"
            android:title="@string/preference_background_mute_music_title"
            android:summary="@string/preference_background_mute_music_description" />
    </PreferenceCategory>

</PreferenceScreen>