<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_menu_main"
    android:gravity="top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/padding_large"
        android:layout_marginTop="@dimen/padding_moderate"
        android:clipToPadding="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/_background_display_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_glass_panel"
            android:padding="@dimen/padding_moderate">
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/center_guideline"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>
            <com.kdt.mcgui.LauncherMenuButton
                android:id="@+id/news_button"
                style="@style/LauncherMenuButton.Universal"
                android:layout_width="0dp"
                android:layout_marginEnd="@dimen/padding_small"
                android:background="@drawable/bg_menu_button"
                android:paddingHorizontal="@dimen/padding_moderate"
                android:drawableStart="@drawable/ic_px_book"
                android:text="@string/mcl_tab_wiki"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/center_guideline"/>
            <com.kdt.mcgui.LauncherMenuButton
                android:id="@+id/social_media_button"
                style="@style/LauncherMenuButton.Universal"
                android:layout_width="0dp"
                android:layout_marginStart="@dimen/padding_small"
                android:background="@drawable/bg_menu_button"
                android:paddingHorizontal="@dimen/padding_moderate"
                android:drawableStart="@drawable/ic_social_media"
                android:text="@string/mcl_button_social_media"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/center_guideline"/>

            <com.kdt.mcgui.LauncherMenuButton
                android:id="@+id/custom_control_button"
                style="@style/LauncherMenuButton.Universal"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/padding_small"
                android:background="@drawable/bg_menu_button"
                android:paddingHorizontal="@dimen/padding_moderate"
                android:drawableStart="@drawable/ic_px_gamepad"
                android:text="@string/mcl_option_customcontrol"
                app:layout_constraintTop_toBottomOf="@id/news_button"/>

            <com.kdt.mcgui.LauncherMenuButton
                android:id="@+id/install_jar_button"
                style="@style/LauncherMenuButton.Universal"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/padding_small"
                android:background="@drawable/bg_menu_button"
                android:paddingHorizontal="@dimen/padding_moderate"
                android:drawableStart="@drawable/ic_px_java_run"
                android:text="@string/main_install_jar_file"
                app:layout_constraintTop_toBottomOf="@id/custom_control_button"
                tools:layout_editor_absoluteX="0dp" />

            <com.kdt.mcgui.LauncherMenuButton
                android:id="@+id/share_logs_button"
                style="@style/LauncherMenuButton.Universal"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/padding_small"
                android:background="@drawable/bg_menu_button"
                android:paddingHorizontal="@dimen/padding_moderate"
                android:drawableStart="@drawable/ic_px_sharelog"
                android:text="@string/main_share_logs"
                app:layout_constraintTop_toBottomOf="@id/install_jar_button" />

            <com.kdt.mcgui.LauncherMenuButton
                android:id="@+id/open_files_button"
                style="@style/LauncherMenuButton.Universal"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/padding_small"
                android:background="@drawable/bg_menu_button"
                android:paddingHorizontal="@dimen/padding_moderate"
                android:drawableStart="@drawable/ic_px_folder"
                android:text="@string/mcl_button_open_directory"

                app:layout_constraintTop_toBottomOf="@id/share_logs_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>




    <com.kdt.mcgui.mcVersionSpinner
        android:id="@+id/mc_version_spinner"
        android:layout_width="0dp"
        android:layout_height="@dimen/_32sdp"
        android:layout_marginStart="@dimen/padding_large"
        android:layout_marginBottom="@dimen/padding_moderate"

        android:background="@android:color/transparent"
        android:drawableEnd="@drawable/spinner_arrow"
        app:drawableEndPadding="@dimen/_1sdp"
        app:drawableEndSize="@dimen/_12sdp"

        app:drawableStartIntegerScaling="true"
        app:drawableStartSize="@dimen/_36sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edit_profile_button"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/edit_profile_button"
        android:layout_width="@dimen/_32sdp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/padding_moderate"

        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_px_edit"
        app:layout_constraintBottom_toBottomOf="@+id/mc_version_spinner"
        app:layout_constraintEnd_toStartOf="@+id/play_button"
        app:layout_constraintTop_toTopOf="@+id/mc_version_spinner" />


    <!-- Floating "glass" bar holding the version selector, profile edit and play button -->
    <View
        android:id="@+id/_background_display_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_glass_bottom_bar"

        android:translationZ="-1dp"
        app:layout_constraintTop_toTopOf="@id/mc_version_spinner"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.kdt.mcgui.MineButton
        android:id="@+id/play_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"


        android:layout_marginEnd="@dimen/padding_large"
        android:textColor="@android:color/white"
        android:text="@string/main_play"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="@+id/mc_version_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mc_version_spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>
